--- a/credit_card_fraud_revised.ipynb
+++ b/credit_card_fraud_revised.ipynb
@@ -239,15 +239,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Best parameters:\n",
+      "parameters:\n",
       " {'criterion': 'gini', 'max_features': 1, 'n_estimators': 50}\n",
       "\n",
-      "Best score:\n",
-      " 0.9351145038167938\n",
-      "\n",
-      "runtime:\n",
-      " 0.8219620000000001 seconds\n"
+      "f1 score:\n",
+      " 0.9243074977073649\n"
      ]
     }
    ],
@@ -261,13 +257,13 @@
     "           'max_features':[1]}]\n",
     "\n",
     "rfc = ensemble.RandomForestClassifier()\n",
-    "grid = GridSearchCV(estimator=rfc, param_grid=params)\n",
+    "grid = GridSearchCV(estimator=rfc, param_grid=params, scoring='f1')\n",
     "\n",
-    "start_time = time.clock()\n",
+    "#start_time = time.clock()\n",
     "grid.fit(X_train, y_train)\n",
-    "print('\\nBest parameters:\\n', grid.best_params_)\n",
-    "print('\\nBest score:\\n', grid.best_score_)\n",
-    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+    "print('parameters:\\n', grid.best_params_)\n",
+    "print('\\nf1 score:\\n', grid.best_score_)\n",
+    "#print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
    ]
   },
   {
@@ -309,7 +305,7 @@
     "- __Type I Error (false positive):__ identify as 1 (fraud) but 0\n",
     "- __Type II Error (false negative):__ identify as 0 but 1\n",
     "- __Sensitivity (recall):__ percentage that 1 was correctly identified\n",
-    "- __Specificity:__ percentage that 0 was correctly identified"
+    "- __Specificity (precision):__ percentage that 0 was correctly identified"
    ]
   },
   {
@@ -334,7 +330,7 @@
       "RFC train sensitivity (recall):\n",
       " 1.0\n",
       "\n",
-      "RFC train specificity:\n",
+      "RFC train specificity (precision):\n",
       " 1.0\n"
      ]
     }
@@ -356,7 +352,7 @@
     "print('\\nRFC train type i error:\\n',ti_rfc)\n",
     "print('\\nRFC train type ii error:\\n',tii_rfc)\n",
     "print('\\nRFC train sensitivity (recall):\\n',sens_rfc)\n",
-    "print('\\nRFC train specificity:\\n',spec_rfc)"
+    "print('\\nRFC train specificity (precision):\\n',spec_rfc)"
    ]
   },
   {
@@ -381,7 +377,7 @@
       "RFC test sensitivity (recall):\n",
       " 0.8787878787878788\n",
       "\n",
-      "RFC test specificity:\n",
+      "RFC test specificity (precision):\n",
       " 0.9696969696969697\n"
      ]
     }
@@ -402,14 +398,14 @@
     "print('\\nRFC test type i error:\\n',ti_rfc)\n",
     "print('\\nRFC test type ii error:\\n',tii_rfc)\n",
     "print('\\nRFC test sensitivity (recall):\\n',sens_rfc)\n",
-    "print('\\nRFC test specificity:\\n',spec_rfc)"
+    "print('\\nRFC test specificity (precision):\\n',spec_rfc)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ RFC is definitely overfitting. Not sure RFC is the best to use on data this imbalanced, undersampling left out a lot of class 0 rows."
+    "__Result:__ RFC is definitely overfitting. Even though classes are perfectly balanced after undersampling, there may not be enough data left for RFC to properly estimate"
    ]
   },
   {
@@ -421,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -430,15 +426,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "parameters:\n",
+      " {'learning_rate': 0.01, 'loss': 'exponential', 'max_depth': 4, 'n_estimators': 500, 'subsample': 0.25}\n",
       "\n",
-      "Best parameters:\n",
-      " {'learning_rate': 0.01, 'loss': 'exponential', 'max_depth': 2, 'n_estimators': 250, 'subsample': 0.75}\n",
-      "\n",
-      "Best score:\n",
-      " 0.9402035623409669\n",
+      "f1 score:\n",
+      " 0.9257450304185104\n",
       "\n",
       "runtime:\n",
-      " 121.47475 seconds\n"
+      " 105.267665 seconds\n"
      ]
     }
    ],
@@ -451,34 +446,34 @@
     "           'subsample':[0.25, 0.5, 0.75, 1]}]\n",
     "\n",
     "gbc = ensemble.GradientBoostingClassifier()\n",
-    "grid = GridSearchCV(estimator=gbc, param_grid=params)\n",
+    "grid = GridSearchCV(estimator=gbc, param_grid=params, scoring='f1')\n",
     "\n",
     "start_time = time.clock()\n",
     "grid.fit(X_train, y_train)\n",
-    "print('\\nBest parameters:\\n', grid.best_params_)\n",
-    "print('\\nBest score:\\n', grid.best_score_)\n",
+    "print('parameters:\\n', grid.best_params_)\n",
+    "print('\\nf1 score:\\n', grid.best_score_)\n",
     "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "GradientBoostingClassifier(criterion='friedman_mse', init=None,\n",
-       "              learning_rate=0.01, loss='exponential', max_depth=3,\n",
+       "              learning_rate=0.01, loss='exponential', max_depth=4,\n",
        "              max_features=None, max_leaf_nodes=None,\n",
        "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "              min_samples_leaf=1, min_samples_split=2,\n",
-       "              min_weight_fraction_leaf=0.0, n_estimators=250,\n",
-       "              presort='auto', random_state=None, subsample=0.75, verbose=0,\n",
+       "              min_weight_fraction_leaf=0.0, n_estimators=500,\n",
+       "              presort='auto', random_state=None, subsample=0.25, verbose=0,\n",
        "              warm_start=False)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,15 +482,15 @@
     "#train with best params\n",
     "gbc = ensemble.GradientBoostingClassifier(loss='exponential',\n",
     "                                          learning_rate=0.01,\n",
-    "                                          n_estimators=250,\n",
-    "                                          max_depth=3,\n",
-    "                                          subsample=0.75)\n",
+    "                                          n_estimators=500,\n",
+    "                                          max_depth=4,\n",
+    "                                          subsample=0.25)\n",
     "gbc.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -503,20 +498,20 @@
      "output_type": "stream",
      "text": [
       "GBC train confusion matrix:\n",
-      " [[384   9]\n",
-      " [ 30 363]]\n",
+      " [[386   7]\n",
+      " [ 37 356]]\n",
       "\n",
       "GBC train type i error:\n",
-      " 9\n",
+      " 7\n",
       "\n",
       "GBC train type ii error:\n",
-      " 30\n",
+      " 37\n",
       "\n",
       "GBC train sensitivity (recall):\n",
-      " 0.9236641221374046\n",
+      " 0.905852417302799\n",
       "\n",
-      "GBC train specificity:\n",
-      " 0.9770992366412213\n"
+      "GBC train specificity (precision):\n",
+      " 0.9821882951653944\n"
      ]
     }
    ],
@@ -535,12 +530,12 @@
     "print('\\nGBC train type i error:\\n',ti_gbc)\n",
     "print('\\nGBC train type ii error:\\n',tii_gbc)\n",
     "print('\\nGBC train sensitivity (recall):\\n',sens_gbc)\n",
-    "print('\\nGBC train specificity:\\n',spec_gbc)"
+    "print('\\nGBC train specificity (precision):\\n',spec_gbc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -549,18 +544,18 @@
      "text": [
       "GBC test confusion matrix:\n",
       " [[99  0]\n",
-      " [ 6 93]]\n",
+      " [10 89]]\n",
       "\n",
       "GBC test type i error:\n",
       " 0\n",
       "\n",
       "GBC test type ii error:\n",
-      " 6\n",
+      " 10\n",
       "\n",
       "GBC test sensitivity (recall):\n",
-      " 0.9393939393939394\n",
+      " 0.898989898989899\n",
       "\n",
-      "GBC test specificity:\n",
+      "GBC test specificity (precision):\n",
       " 1.0\n"
      ]
     }
@@ -583,14 +578,14 @@
     "print('\\nGBC test type i error:\\n',ti_gbc)\n",
     "print('\\nGBC test type ii error:\\n',tii_gbc)\n",
     "print('\\nGBC test sensitivity (recall):\\n',sens_gbc)\n",
-    "print('\\nGBC test specificity:\\n',spec_gbc)"
+    "print('\\nGBC test specificity (precision):\\n',spec_gbc)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ Better results than RFC, slightly higher test scores than train scores is of concern, could simply be due the size of undersampled dataset"
+    "__Result:__ This model is very inconsistent, often has higher test scores than train scores, could data limitations on tree based classifiers, I don't trust these results however. The fact that results are not repeatable excludes GBC as best choice for this task."
    ]
   },
   {
@@ -602,46 +597,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Best parameters:\n",
+      "parameters:\n",
       " {'C': 1, 'kernel': 'rbf'}\n",
       "\n",
-      "Best score:\n",
-      " 0.9325699745547074\n",
-      "\n",
-      "runtime:\n",
-      " 0.26949100000001636 seconds\n"
+      "f1 score:\n",
+      " 0.9193043016107612\n"
      ]
     }
    ],
    "source": [
     "#parameter search\n",
-    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.svm import SVC\n",
     "\n",
     "params = [{'C':[0.01, 0.1, 1, 10],\n",
     "           'kernel':['rbf','linear','poly']}]\n",
     "\n",
     "svc = SVC()\n",
-    "grid_svc = GridSearchCV(estimator=svc, param_grid=params)\n",
+    "grid = GridSearchCV(estimator=svc, param_grid=params, scoring='f1')\n",
     "\n",
-    "start_time = time.clock()\n",
-    "grid_svc.fit(X_train, y_train)\n",
-    "print('\\nBest parameters:\\n', grid_svc.best_params_)\n",
-    "print('\\nBest score:\\n', grid_svc.best_score_)\n",
-    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+    "#start_time = time.clock()\n",
+    "grid.fit(X_train, y_train)\n",
+    "print('parameters:\\n', grid.best_params_)\n",
+    "print('\\nf1 score:\\n', grid.best_score_)\n",
+    "#print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +643,7 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -674,20 +664,20 @@
      "output_type": "stream",
      "text": [
       "SVC train confusion matrix:\n",
-      " [[385   8]\n",
-      " [ 33 360]]\n",
+      " [[389   4]\n",
+      " [ 44 349]]\n",
       "\n",
       "SVC train type i error:\n",
-      " 8\n",
+      " 4\n",
       "\n",
       "SVC train type ii error:\n",
-      " 33\n",
+      " 44\n",
       "\n",
       "SVC train sensitivity (recall):\n",
-      " 0.916030534351145\n",
+      " 0.8880407124681934\n",
       "\n",
-      "SVC train specificity:\n",
-      " 0.9796437659033079\n"
+      "SVC train specificity (precision):\n",
+      " 0.989821882951654\n"
      ]
     }
    ],
@@ -706,12 +696,12 @@
     "print('\\nSVC train type i error:\\n',ti_svc)\n",
     "print('\\nSVC train type ii error:\\n',tii_svc)\n",
     "print('\\nSVC train sensitivity (recall):\\n',sens_svc)\n",
-    "print('\\nSVC train specificity:\\n',spec_svc)"
+    "print('\\nSVC train specificity (precision):\\n',spec_svc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -721,20 +711,20 @@
      "output_type": "stream",
      "text": [
       "SVC test confusion matrix:\n",
-      " [[94  5]\n",
-      " [10 89]]\n",
+      " [[98  1]\n",
+      " [12 87]]\n",
       "\n",
       "SVC test type i error:\n",
-      " 5\n",
+      " 1\n",
       "\n",
       "SVC test type ii error:\n",
-      " 10\n",
+      " 12\n",
       "\n",
       "SVC test sensitivity (recall):\n",
-      " 0.898989898989899\n",
+      " 0.8787878787878788\n",
       "\n",
-      "SVC test specificity:\n",
-      " 0.9494949494949495\n"
+      "SVC test specificity (precision):\n",
+      " 0.98989898989899\n"
      ]
     }
    ],
@@ -753,14 +743,14 @@
     "print('\\nSVC test type i error:\\n',ti_svc)\n",
     "print('\\nSVC test type ii error:\\n',tii_svc)\n",
     "print('\\nSVC test sensitivity (recall):\\n',sens_svc)\n",
-    "print('\\nSVC test specificity:\\n',spec_svc)"
+    "print('\\nSVC test specificity (precision):\\n',spec_svc)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ most trustworthy results so far, with pretty high accuracy and some but not too much overfitting"
+    "__Result:__ most trustworthy results so far, decently accurate without much evidence of overfitting"
    ]
   },
   {
@@ -772,22 +762,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "parameters:\n",
+      " {'C': 0.01, 'fit_intercept': True, 'max_iter': 50, 'penalty': 'l2'}\n",
       "\n",
-      "Best parameters:\n",
-      " {'C': 0.1, 'fit_intercept': True, 'max_iter': 50, 'penalty': 'l1'}\n",
-      "\n",
-      "Best score:\n",
-      " 0.9338422391857506\n",
-      "\n",
-      "runtime:\n",
-      " 0.3899989999999889 seconds\n"
+      "f1 score:\n",
+      " 0.9211407007018042\n"
      ]
     }
    ],
@@ -801,38 +787,38 @@
     "           'max_iter':[50,100,200]}]\n",
     "\n",
     "clf_lr = LogisticRegression()\n",
-    "grid = GridSearchCV(estimator=clf_lr, param_grid=params)\n",
+    "grid = GridSearchCV(estimator=clf_lr, param_grid=params, scoring='f1')\n",
     "\n",
-    "start_time = time.clock()\n",
+    "#start_time = time.clock()\n",
     "grid.fit(X_train, y_train)\n",
-    "print('\\nBest parameters:\\n', grid.best_params_)\n",
-    "print('\\nBest score:\\n', grid.best_score_)\n",
-    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+    "print('parameters:\\n', grid.best_params_)\n",
+    "print('\\nf1 score:\\n', grid.best_score_)\n",
+    "#print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=0.1, class_weight=None, dual=False, fit_intercept=True,\n",
+       "LogisticRegression(C=0.01, class_weight=None, dual=False, fit_intercept=True,\n",
        "          intercept_scaling=1, max_iter=50, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l1', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#train\n",
-    "clf_lr = LogisticRegression(penalty='l1',\n",
-    "                            C=0.1,\n",
+    "clf_lr = LogisticRegression(penalty='l2',\n",
+    "                            C=0.01,\n",
     "                            fit_intercept=True,\n",
     "                            max_iter=50)\n",
     "clf_lr.fit(X_train, y_train)"
@@ -840,28 +826,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC train confusion matrix:\n",
-      " [[387   6]\n",
-      " [ 48 345]]\n",
+      "LR train confusion matrix:\n",
+      " [[382  11]\n",
+      " [ 47 346]]\n",
       "\n",
       "LR train type i error:\n",
-      " 6\n",
+      " 11\n",
       "\n",
       "LR train type ii error:\n",
-      " 48\n",
+      " 47\n",
       "\n",
       "LR train sensitivity (recall):\n",
-      " 0.8778625954198473\n",
+      " 0.8804071246819338\n",
       "\n",
-      "LR train specificity:\n",
-      " 0.9847328244274809\n"
+      "LR train specificity (precision):\n",
+      " 0.9720101781170484\n"
      ]
     }
    ],
@@ -876,37 +862,37 @@
     "sens_lr = lr_cm[1,1] / (lr_cm[1,0] + lr_cm[1,1])\n",
     "spec_lr = lr_cm[0,0] / (lr_cm[0,0] + lr_cm[0,1])\n",
     "\n",
-    "print('SVC train confusion matrix:\\n',lr_cm)\n",
+    "print('LR train confusion matrix:\\n',lr_cm)\n",
     "print('\\nLR train type i error:\\n',ti_lr)\n",
     "print('\\nLR train type ii error:\\n',tii_lr)\n",
     "print('\\nLR train sensitivity (recall):\\n',sens_lr)\n",
-    "print('\\nLR train specificity:\\n',spec_lr)"
+    "print('\\nLR train specificity (precision):\\n',spec_lr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC test confusion matrix:\n",
-      " [[95  4]\n",
-      " [11 88]]\n",
+      "LR test confusion matrix:\n",
+      " [[96  3]\n",
+      " [10 89]]\n",
       "\n",
       "LR test type i error:\n",
-      " 4\n",
+      " 3\n",
       "\n",
       "LR test type ii error:\n",
-      " 11\n",
+      " 10\n",
       "\n",
       "LR test sensitivity (recall):\n",
-      " 0.8888888888888888\n",
+      " 0.898989898989899\n",
       "\n",
-      "LR test specificity:\n",
-      " 0.9595959595959596\n"
+      "LR test specificity (precision):\n",
+      " 0.9696969696969697\n"
      ]
     }
    ],
@@ -921,18 +907,18 @@
     "sens_lr = lr_cm[1,1] / (lr_cm[1,0] + lr_cm[1,1])\n",
     "spec_lr = lr_cm[0,0] / (lr_cm[0,0] + lr_cm[0,1])\n",
     "\n",
-    "print('SVC test confusion matrix:\\n',lr_cm)\n",
+    "print('LR test confusion matrix:\\n',lr_cm)\n",
     "print('\\nLR test type i error:\\n',ti_lr)\n",
     "print('\\nLR test type ii error:\\n',tii_lr)\n",
     "print('\\nLR test sensitivity (recall):\\n',sens_lr)\n",
-    "print('\\nLR test specificity:\\n',spec_lr)"
+    "print('\\nLR test specificity (precision):\\n',spec_lr)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ Recall results are a little fishy, similar results to SVC but I think SVC's are more reliable/trustworthy"
+    "__Result:__ more trustworthy results, performance is similar to SVC though slightly less accurate, test will occasionally outperform train by about 1%, still prefer SVC for its slightly higher accuracy, with more consistent/reproducable results"
    ]
   }
  ],
