final, fixed typos

--- a/credit_card_fraud_revised.ipynb
+++ b/credit_card_fraud_revised.ipynb
@@ -585,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ This model is very inconsistent, often has higher test scores than train scores, could data limitations on tree based classifiers, I don't trust these results however. The fact that results are not repeatable excludes GBC as best choice for this task."
+    "__Result:__ This model is very inconsistent, often has higher test scores than train scores, could data limitations on tree based classifiers, I don't trust what this model is doing. Varying train/test results that are not very reproducible excludes GBC as best choice for this task."
    ]
   },
   {
@@ -918,8 +918,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ more trustworthy results, performance is similar to SVC though slightly less accurate, test will occasionally outperform train by about 1%, still prefer SVC for its slightly higher accuracy, with more consistent/reproducable results"
+    "__Result:__ LR with ridge parameter also gives results on the trustworthy spectrum, performance is similar to SVC though slightly less accurate. The test set will occasionally outperform train by about 1%, still prefer SVC for its slightly higher accuracy and more consistent/reproducable results."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
