--- a/credit_card_fraud_revised.ipynb
+++ b/credit_card_fraud_revised.ipynb
@@ -941,8 +941,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ LR with lasso parameter also gives results on the trustworthy spectrum. Performance is similar to SVC, and though slightly less accurate, it's also a bit more consistent with its results.. The test set will occasionally outperform train by about 1% (similar to SVC). I would choose to use and compare both SVC and LR with this undersampled data. Overall, I would prefer to use a resampling technique that doesn't disregard so much data, as much is being lost in the omitted rows, but my personal machine's compute power cannot handle datasets this large on its own."
+    "__Result:__ LR with lasso penalty also gives results on the trustworthy spectrum. Performance is similar to SVC, and though slightly less accurate, it's also a bit more consistent with its results.. The test set will occasionally outperform train by about 1% (similar to SVC). I would choose to use and compare both SVC and LR with this undersampled data. Overall, I would prefer to use a resampling technique that doesn't disregard so much data, as much is being lost in the omitted rows, but my personal machine's compute power cannot handle datasets this large on its own."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
